updated pom to include even newer scala version